configs/3 - backend/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proj7-be
  #namespace: devops-jkpraja
spec:
  selector:
    matchLabels:
      app: proj7-be
  template:
    metadata:
      labels:
        app: proj7-be
    spec:
      volumes:
        - name: import-db
          configMap:
            name: be-configmap
      containers:
      - name: proj7-be
        image: jkpraja/be:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: import-db
          mountPath: "/app/crud_db.sql"
          subPath: "crud_db.sql"
