configs/3 - backend/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proj7-be-service
  #namespace: devops-jkpraja
spec:
  selector:
    app: proj7-be
  ports:
  - port: 80
    targetPort: 5000
