configs/3 - backend/ingress-be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proj7-ingress-be
  #annotations:
  #  kubernetes.io/ingress.class: "nginx"
  #  alb.ingress.kubernetes.io/scheme: internet-facing
  #  alb.ingress.kubernetes.io/target-type: instance
  #namespace: devops-jkpraja
  labels:
    name: proj7-ingress-be
spec:
 # tls:
 # - hosts:
 #   - kube.c2loud.com
 #   secretName: proj7-secret-tls
  ingressClassName: nginx
  rules:
  - host: backend.c2loud.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proj7-be-service
            port: 
              number: 80
